# actix-web-examples

./: Cargo.toml  README.md  build.rs  docker-compose.yml  plantuml-code.txt  route-testing.http
gateway/: .dockerignore  Cargo.toml  Dockerfile  build.rs
gateway/src/: actor.rs  graphql.rs  kafka_consumer.rs  lib.rs  main.rs  rest.rs  simple.rs  v2.rs  web_socket.rs
src/: graphql.rs  lib.rs  main.rs  models.rs  rest.rs  simple.rs  v1.rs  v2.rs
src/front-end/: package-lock.json
user-service/: Cargo.toml  Dockerfile  README.md
user-service/src/: kafka_consumer.rs  kafka_producer.rs  lib.rs  main.rs  models.rs
