[package]
name = "learn-actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web-actors = "4.1.0"
actix = "0.13.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
