[package]
name = "learn-actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = "4.0.15"
async-graphql-actix-web = "4.0.15"
actix-web-actors = "4.1.0"
actix = "0.13.0"
actix-web = "4.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
env_logger = "0.9.1"
log = "0.4.17"

