[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lru = "0.8.1"
rdkafka = { version = "0.28", features = ["cmake-build"] }
uuid = { version = "1.2.1", features = ["v4", "fast-rng"] }
actix-rt = "2.7.0"
static-files = "0.2.1"
actix-web-static-files = "4.0.0"
actix-files = "0.6.2"
async-graphql = "4.0.15"
async-graphql-actix-web = "4.0.15"
actix-web-actors = "4.1.0"
actix = "0.13.0"
actix-web = "4.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
env_logger = "0.9.1"
log = "0.4.17"

[build-dependencies]
static-files = "0.2.3"
